--- a/Titanic Survival Workshop.ipynb
+++ b/Titanic Survival Workshop.ipynb
@@ -1303,12 +1303,24 @@
     "\n",
     "Now you have a basic pipeline. How can you improve the score? Try:\n",
     "- adding new features\n",
+    "  could you add a feature for family?\n",
+    "  could you use the Embark or other as dummies\n",
+    "  check the get_dummies function here:\n",
+    "  http://pandas.pydata.org/pandas-docs/stable/generated/pandas.get_dummies.html\n",
+    "\n",
     "- changing the parameters of the model\n",
+    "  check the documentation here:\n",
+    "  http://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html\n",
+    "  \n",
     "- changing the model itself\n",
+    "  check examples here:\n",
+    "  http://scikit-learn.org/stable/auto_examples/classification/plot_classifier_comparison.html\n",
     "\n",
     "Let's have a small competition....\n",
     "\n",
-    "### 4) Optional: upload your prediction to Kaggle using the test dataset"
+    "### 4) Optional: upload your prediction to Kaggle using the test dataset\n",
+    "\n",
+    "https://www.kaggle.com/c/titanic/submissions/attach"
    ]
   }
  ],
